--- a/charts/oauth2-proxy-recipes/templates/oauth2proxy.yaml
+++ b/charts/oauth2-proxy-recipes/templates/oauth2proxy.yaml
@@ -78,6 +78,9 @@ metadata:
 spec:
   ttlSecondsAfterFinished: 3600
   template:
+    metadata:
+      labels:
+        {{- include "dp-oauth2proxy-recipes.labels" . | nindent 8 }}
     spec:
     {{- if .Values.podSecurityContext }}
       securityContext:
