--- a/charts/tp-cp-flogo-recipes/templates/flogo.yaml
+++ b/charts/tp-cp-flogo-recipes/templates/flogo.yaml
@@ -128,6 +128,13 @@ spec:
       - name: flogo
         image: {{ include "tp-cp-flogo-recipes.image.registry" .}}{{"/"}}{{ include "tp-cp-flogo-recipes.image.repository" .}}{{"/"}}{{ .Values.image.name }}:{{ .Values.image.tag}}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+        resources:
+          requests:
+            cpu: {{ .Values.resources.requests.cpu }}
+            memory: {{ .Values.resources.requests.memory }}
+          limits:
+            cpu: {{.Values.resources.limits.cpu }}
+            memory: {{ .Values.resources.limits.memory }}
         {{- if .Values.securityContext }}
         securityContext:
           {{- toYaml .Values.securityContext | nindent 10 }}
