--- a/charts/tp-cp-flogo-recipes/values.yaml
+++ b/charts/tp-cp-flogo-recipes/values.yaml
@@ -42,3 +42,11 @@ securityContext:
   capabilities:
     drop:
       - ALL
+
+resources:
+  requests:
+    cpu: 10m
+    memory: 15Mi
+  limits:
+    cpu: 50m
+    memory: 30Mi
