--- a/charts/tp-cp-tibcohub-contrib/values.yaml
+++ b/charts/tp-cp-tibcohub-contrib/values.yaml
@@ -52,3 +52,11 @@ securityContext:
 global:
   tibco:
     enableLogging: true
+
+resources:
+  requests:
+    cpu: 10m
+    memory: 15Mi
+  limits:
+    cpu: 50m
+    memory: 30Mi
