--- a/charts/tp-cp-core-ops/values.yaml
+++ b/charts/tp-cp-core-ops/values.yaml
@@ -40,3 +40,10 @@ global:
       capabilities:
         drop:
           - ALL
+  resources:
+    requests:
+      cpu: 10m
+      memory: 15Mi
+    limits:
+      cpu: 50m
+      memory: 30Mi
