--- a/charts/tp-cp-flogo-utilities/charts/flogo-utilities/templates/job-flogo-vscode-extension-post-extraction.yaml
+++ b/charts/tp-cp-flogo-utilities/charts/flogo-utilities/templates/job-flogo-vscode-extension-post-extraction.yaml
@@ -41,6 +41,8 @@ spec:
       - name: post-extractor
         image: {{ include "flogo-utilities.image.registry" .}}{{"/"}}{{ include "flogo-utilities.infra.image.repository" .}}{{"/"}}{{ $.Values.debug.image.name }}:{{ $.Values.debug.image.tag }}
         {{- with $.Values.securityContext }}
+        resources:
+        {{- toYaml $.Values.resources | nindent 10 }}
         securityContext:
           {{- toYaml $.Values.securityContext | nindent 10 }}
         {{- end }}
