--- a/charts/tp-cp-hawk-console-recipes/values.yaml
+++ b/charts/tp-cp-hawk-console-recipes/values.yaml
@@ -45,3 +45,10 @@ securityContext:
   capabilities:
     drop:
       - ALL
+resources:
+  requests:
+    cpu: 10m
+    memory: 15Mi
+  limits:
+    cpu: 50m
+    memory: 30Mi
