--- a/charts/tp-cp-hawk/charts/tp-cp-hawk-infra-prometheus/values.yaml
+++ b/charts/tp-cp-hawk/charts/tp-cp-hawk-infra-prometheus/values.yaml
@@ -54,10 +54,10 @@ prometheusds:
   resources:
     requests:
       cpu: 200m
-      memory: 128m
+      memory: 128Mi
     limits:
       cpu: 300m
-      memory: 256m
+      memory: 256Mi
 
 ## Images
 ##
