--- a/charts/platform-addon-eventprocessing/Chart.yaml
+++ b/charts/platform-addon-eventprocessing/Chart.yaml
@@ -8,8 +8,8 @@ apiVersion: v2
 name: platform-addon-eventprocessing
 description: TIBCO Platform chart for BE addon
 type: application
-version: 1.3.7
-appVersion: "1.3.0"
+version: 1.3.8
+appVersion: "1.3.0-HF3"
 keywords:
   - tibco-platform
   - platform
@@ -20,7 +20,7 @@ annotations:
   app.helm.sh/name: platform-addon-eventprocessing
 dependencies:
   - name: tp-cp-eventprocessing-be
-    version: "1.3.9"
+    version: "1.3.10"
     repository: alias:tibco-platform
     condition: tp-cp-eventprocessing-be.enabled
     tags:
