Stage charts for msgdp-1.3.0-HF3

--- a/charts/msg-ems-tp/templates/ems.rest.ingress.yaml
+++ b/charts/msg-ems-tp/templates/ems.rest.ingress.yaml
@@ -20,7 +20,7 @@ metadata:
   name: "{{ $svcEms }}-admin"
   namespace: {{ .Release.Namespace }}
   annotations:
-    ingress.kubernetes.io/path-rewrite: '/tibco/msg/ems/{{ $emsParams.dp.instanceId }}/rest/(.*) /\1'
+    ingress.kubernetes.io/path-rewrite: '/tibco/agent/msg/ems/{{ $emsParams.dp.instanceId }}/rest/(.*) /\1'
   labels:
     {{ include "msg.dp.labels" . | indent 4 }}
     {{ include "ems.std.labels" $emsParams | indent 4 }}
