--- a/charts/tp-cp-eventprocessing-be/Chart.yaml
+++ b/charts/tp-cp-eventprocessing-be/Chart.yaml
@@ -4,8 +4,8 @@
 
 apiVersion: v2
 name: tp-cp-eventprocessing-be
-version: 1.3.9
-appVersion: 1.3.0
+version: 1.3.11
+appVersion: 1.3.0-HF3
 description: TIBCO Platform Control Plane -- BE Addon
 dependencies:
   - name: be-webserver
