Stage charts for hawk-1.3.0-HF3

--- a/charts/tp-cp-hawk/charts/tp-cp-hawk-infra-querynode/Chart.yaml
+++ b/charts/tp-cp-hawk/charts/tp-cp-hawk-infra-querynode/Chart.yaml
@@ -4,8 +4,8 @@
 
 apiVersion: v2
 name: tp-cp-hawk-infra-querynode
-version: 1.3.14
-appVersion: 1.3.0
+version: 1.3.22
+appVersion: 1.3.0-HF3
 description: TIBCO Platform Control Plane - Hawk Infra Query Node
 icon: https://pbs.twimg.com/profile_images/1064638558110007296/K6HqaXwh_400x400.jpg
 maintainers:
