--- a/charts/tp-cp-hawk-console-recipes/Chart.yaml
+++ b/charts/tp-cp-hawk-console-recipes/Chart.yaml
@@ -6,8 +6,8 @@ apiVersion: v2
 name: tp-cp-hawk-console-recipes
 description: TIBCO Platform Hawk Data Plane recipes
 type: application
-version: 1.3.26
-appVersion: "1.3.0"
+version: 1.3.28
+appVersion: "1.3.0-HF3"
 keywords:
   - tibco-platform
   - infra
