--- a/charts/tp-cp-hawk/Chart.yaml
+++ b/charts/tp-cp-hawk/Chart.yaml
@@ -3,7 +3,7 @@
 # in the license file that is distributed with this file.
 
 apiVersion: v2
-appVersion: "1.3.0"
+appVersion: "1.3.0-HF3"
 description: TIBCO Platform Control Plane - Hawk Infra Bundle
 dependencies:
   - name: tp-cp-hawk-infra-querynode
@@ -20,4 +20,4 @@ keywords:
 maintainers:
   - name: TIBCO Cloud Hawk Team
 name: tp-cp-hawk
-version: 1.3.18
+version: 1.3.22
