Picking up the TPCore build 1.3.8408.

--- a/charts/tp-cp-core/charts/email-service/templates/cp-email.yaml
+++ b/charts/tp-cp-core/charts/email-service/templates/cp-email.yaml
@@ -59,7 +59,7 @@ spec:
       securityContext:
         {{- toYaml .Values.global.podSecurityContext | nindent 8 }}
       {{- end }}
-      {{- if eq ( include "cp-core-configuration.provider-name" . ) "aws" }}
+      {{- if eq .Values.global.external.emailServerType "ses" }}
       serviceAccountName: {{ include "cp-core-configuration.service-account-name" . }}
       {{- else }}
       automountServiceAccountToken: false
