--- a/charts/tp-cp-core/charts/email-service/values.yaml
+++ b/charts/tp-cp-core/charts/email-service/values.yaml
@@ -8,7 +8,7 @@
 global:
   external:
     fromAndReplyToEmailAddress: ""
-    emailServerType: "smtp"
+    emailServerType: "ses"
     emailServer:
       ses:
         arn: ""
