--- a/charts/tp-cp-core/charts/orchestrator/values.yaml
+++ b/charts/tp-cp-core/charts/orchestrator/values.yaml
@@ -14,7 +14,9 @@ global:
   tibco:
     image_name:
       orchestrator: ""
-    image_repo_path: ""      
+    image_repo_path: ""
+    db_ssl_root_cert_secretname: "db-ssl-root-cert"
+    db_ssl_root_cert_filename: "db_ssl_root.cert"
     is_replica_region: false
     logging:
       fluentbit:
