--- a/charts/tp-cp-core/charts/pengine/templates/tp-cp-pengine.yaml
+++ b/charts/tp-cp-core/charts/pengine/templates/tp-cp-pengine.yaml
@@ -190,7 +190,11 @@ spec:
         - name: POSTGRES_ENDPOINT_URL
           value: "$(PGHOST):$(PGPORT)"
         - name: POSTGRES_DATABASE_SSL_ROOT_CERT_FILE_LOCATION
-          value: {{ .Values.global.external.db_ssl_root_cert }}
+          {{- if eq .Values.global.external.db_ssl_mode "disable" }}
+          value: ""
+          {{- else }}
+          value: /private/tsc/certificates/{{ .Values.global.tibco.db_ssl_root_cert_filename }}
+          {{- end }}
         - name: NOTIFICATION_PAYLOAD_THRESHOLD_SIZE_IN_BYTES
           valueFrom:
             configMapKeyRef:
@@ -220,9 +224,9 @@ spec:
         - name: store-vol
           mountPath: /private/tsc/config
           subPath: tsc/config
-        - name: store-vol
+        - name: db-ssl-cert-vol
           mountPath: /private/tsc/certificates
-          subPath: tsc/certificates
+          readOnly: true
 {{- if (include "cp-core-configuration.enableLogging" .) }}
       - name: fluentbit
         image: {{ include "cp-core-configuration.container-registry" .}}{{"/"}}{{ include "cp-core-configuration.image-repository" . }}{{"/"}}{{ .Values.global.tibco.logging.fluentbit.image.name }}:{{ .Values.global.tibco.logging.fluentbit.image.tag }}
@@ -272,6 +276,9 @@ spec:
           configMap:
             name: {{ include "tp-cp-pengine.consts.appName" . }}-fluentbit-config
 {{- end }}
+        - name: db-ssl-cert-vol
+          secret:
+            secretName: {{ .Values.global.tibco.db_ssl_root_cert_secretname }}
         - name: store-vol
           persistentVolumeClaim:
             claimName: {{ include "cp-core-configuration.pvc-name" . }}
