--- a/charts/tp-cp-core/charts/user-subscriptions/values.yaml
+++ b/charts/tp-cp-core/charts/user-subscriptions/values.yaml
@@ -15,6 +15,8 @@ global:
       userSubscriptions: ""
     image_repo_path: ""
     is_replica_region: false
+    db_ssl_root_cert_secretname: "db-ssl-root-cert"
+    db_ssl_root_cert_filename: "db_ssl_root.cert"
     logging:
       fluentbit:
         image:
