--- a/charts/tp-cp-core/charts/admin-webserver/Chart.yaml
+++ b/charts/tp-cp-core/charts/admin-webserver/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 1.3.0
+appVersion: 1.3.0-HF3
 description: A Helm chart for -- Admin WebServer
 name: admin-webserver
-version: 1.3.1182
+version: 1.3.1262
