--- a/charts/tp-cp-core/charts/cronjobs/templates/cp-cronjobs.yaml
+++ b/charts/tp-cp-core/charts/cronjobs/templates/cp-cronjobs.yaml
@@ -172,8 +172,6 @@ spec:
               key: {{ .Chart.Name }}.scheduleFrequencyForProvisionInfraCapabilitiesJob
         - name: TSC_BILLING_EMAIL_ALIAS
           value: {{ (.Values.global.external.cronJobReportsEmailAlias) }}
-        - name: TIBCO_INTERNAL_IAAS_VENDOR
-          value: {{ include "cp-core-configuration.provider-name" . }}
         - name: TSC_SCHEDULER_AWS_REGION
           valueFrom:
             configMapKeyRef:
@@ -237,11 +235,11 @@ spec:
         - name: WRITE_POSTGRES_DATABASE_SSL_MODE
           value: {{ .Values.global.external.db_ssl_mode }}
         - name: WRITE_POSTGRES_DATABASE_SSL_ROOT_CERT
-          value: {{ .Values.global.external.db_ssl_root_cert }}
+          value: /private/tsc/certificates/{{ .Values.global.tibco.db_ssl_root_cert_filename }}
         - name: READ_POSTGRES_DATABASE_SSL_MODE
           value: {{ .Values.global.external.db_ssl_mode }}
         - name: READ_POSTGRES_DATABASE_SSL_ROOT_CERT
-          value: {{ .Values.global.external.db_ssl_root_cert }}
+          value: /private/tsc/certificates/{{ .Values.global.tibco.db_ssl_root_cert_filename }}
         - name: TSC_CONFIG_LOCATION
           value: {{ include "tp-cp-cronjobs.consts.tscConfigLocation" . }}
         - name: TSC_CONFIGURATION_LOCATION_COMMON
@@ -252,25 +250,13 @@ spec:
               name: {{ include "tp-control-plane-dnsdomain-configmap" . }}
               key: TSC_DNS_DOMAIN
         - name: DISABLE_PROVISION_INFRA_CAPABILITIES_JOB
-          valueFrom:
-            configMapKeyRef:
-              name: {{ include "tp-control-plane-env-configmap" . }}
-              key: {{ .Chart.Name }}.disableProvisionInfraCapabilitiesJob
+          value: {{ .Values.global.tibco.cronjobs.disableProvisionInfraCapabilitiesJob | quote }}
         - name: DISABLE_GDPR_PURGE_HISTORY_JOB
-          valueFrom:
-            configMapKeyRef:
-              name: {{ include "tp-control-plane-env-configmap" . }}
-              key: {{ .Chart.Name }}.disableGdprPurgeHistoryJob
+          value: {{ .Values.global.tibco.cronjobs.disableGdprPurgeHistoryJob | quote }}
         - name: DISABLE_IDM_CLEAN_UP_JOB
-          valueFrom:
-            configMapKeyRef:
-              name: {{ include "tp-control-plane-env-configmap" . }}
-              key: {{ .Chart.Name }}.disableIdmCleanUpJob
+          value: {{ .Values.global.tibco.cronjobs.disableIdmCleanUpJob | quote }}
         - name: DISABLE_IDM_NOTIFY_CERTIFICATES_EXPIRY_JOB
-          valueFrom:
-            configMapKeyRef:
-              name: {{ include "tp-control-plane-env-configmap" . }}
-              key: {{ .Chart.Name }}.disableIdmNotifyCertificatesExpiryJob
+          value: {{ .Values.global.tibco.cronjobs.disableIdmNotifyCertificatesExpiryJob  | quote }}
         - name: ENVIRONMENT_TYPE
           value: {{ (.Values.global.external.environment | lower) }}
         - name: POSTGRES_UTD_DATABASE_NAME
@@ -281,9 +267,9 @@ spec:
           - name: store-vol
             mountPath: /private/tsc/config
             subPath: tsc/config
-          - name: store-vol
+          - name: db-ssl-cert-vol
             mountPath: /private/tsc/certificates
-            subPath: tsc/certificates
+            readOnly: true
 {{- if (include "cp-core-configuration.enableLogging" .) }}
       - name: fluentbit
         image: {{ include "cp-core-configuration.container-registry" .}}{{"/"}}{{ include "cp-core-configuration.image-repository" . }}{{"/"}}{{ .Values.global.tibco.logging.fluentbit.image.name }}:{{ .Values.global.tibco.logging.fluentbit.image.tag }}
@@ -333,6 +319,9 @@ spec:
           configMap:
             name: {{ include "tp-cp-cronjobs.consts.appName" . }}-fluentbit-config
 {{- end }}
+        - name: db-ssl-cert-vol
+          secret:
+            secretName: {{ .Values.global.tibco.db_ssl_root_cert_secretname }}
         - name: store-vol
           persistentVolumeClaim:
             claimName: {{ include "cp-core-configuration.pvc-name" . }}
