--- a/charts/tp-cp-core/charts/cronjobs/values.yaml
+++ b/charts/tp-cp-core/charts/cronjobs/values.yaml
@@ -9,7 +9,9 @@ global:
   tibco:
     image_name:
       cronjobs: ""
-    image_repo_path: ""      
+    image_repo_path: ""
+    db_ssl_root_cert_secretname: "db-ssl-root-cert"
+    db_ssl_root_cert_filename: "db_ssl_root.cert"
     logging:
       fluentbit:
         image:
@@ -19,6 +21,11 @@ global:
       distroless_debian:
         name: "common-distroless-base-debian-debug"
         tag: 12
+    cronjobs:
+      disableProvisionInfraCapabilitiesJob: "false"
+      disableGdprPurgeHistoryJob: "true"
+      disableIdmCleanUpJob: "false"
+      disableIdmNotifyCertificatesExpiryJob: "true"
 
   # Pod Security Context configuration
   # This configuration ensures that the pod is run with non-root privileges for enhanced security.
