--- a/charts/tp-cp-core/charts/email-service/Chart.yaml
+++ b/charts/tp-cp-core/charts/email-service/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 1.3.0
+appVersion: 1.3.0-HF3
 description: A Helm chart for -- Email service
 name: email-service
-version: 1.3.320
+version: 1.3.333
