--- a/charts/tp-cp-core/charts/identity-provider/Chart.yaml
+++ b/charts/tp-cp-core/charts/identity-provider/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: 1.3.0
+appVersion: 1.3.0-HF3
 description: A Helm Chart for TIBCO Platform Control Plane -- Identity Provider
 name: identity-provider
-version: 1.3.580
+version: 1.3.624
