--- a/charts/tp-cp-core/charts/pengine/Chart.yaml
+++ b/charts/tp-cp-core/charts/pengine/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 1.3.0
+appVersion: 1.3.0-HF3
 description: A Helm Chart for TIBCO Platform Control Plane Permissions Engine
 name: pengine
-version: 1.3.782
+version: 1.3.807
