--- a/charts/tp-cp-core/charts/pengine/values.yaml
+++ b/charts/tp-cp-core/charts/pengine/values.yaml
@@ -9,6 +9,8 @@ global:
     image_name:
       pengine: ""
     image_repo_path: ""
+    db_ssl_root_cert_secretname: "db-ssl-root-cert"
+    db_ssl_root_cert_filename: "db_ssl_root.cert"
     is_replica_region: false
     logging:
       fluentbit:
@@ -18,6 +20,7 @@ global:
   external:
     enableLogging: false
     region: ""
+    db_ssl_mode: "disable"
 
   # Pod Security Context configuration
   # This configuration ensures that the pod is run with non-root privileges for enhanced security.
