--- a/charts/tp-cp-core/charts/user-subscriptions/Chart.yaml
+++ b/charts/tp-cp-core/charts/user-subscriptions/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 1.3.0
+appVersion: 1.3.0-HF3
 description: A Helm chart for -- User Subscriptions
 name: user-subscriptions
-version: 1.3.1598
+version: 1.3.1678
