--- a/charts/tp-cp-core/templates/jobs-db-secretes.yaml
+++ b/charts/tp-cp-core/templates/jobs-db-secretes.yaml
@@ -19,3 +19,20 @@ type: Opaque
 data:
   PASSWORD: {{ .Values.global.external.db_password | b64enc }}
   USERNAME: {{ .Values.global.external.db_username | b64enc }}
+
+---
+{{- if eq .Values.global.external.db_ssl_mode "disable" }}
+apiVersion: v1
+kind: Secret
+metadata:
+  annotations:
+    "helm.sh/hook": pre-install, pre-upgrade
+    "helm.sh/hook-weight": "0"
+  name: {{ .Values.global.tibco.db_ssl_root_cert_secretname }}
+  namespace: {{ include "tp-control-plane.consts.namespace" . }}
+type: Opaque
+data:
+  {{ .Values.global.tibco.db_ssl_root_cert_filename }}: ""
+
+---
+{{- end }}
