--- a/charts/tp-cp-core/values.yaml
+++ b/charts/tp-cp-core/values.yaml
@@ -13,6 +13,11 @@ global:
   tibco:
     region: "global"
     region_to_prefix: '{"TSC":{"global":""},"ADMIN":{"global":""}}'
+    cronjobs:
+      disableProvisionInfraCapabilitiesJob: "false"
+      disableGdprPurgeHistoryJob: "true"
+      disableIdmCleanUpJob: "false"
+      disableIdmNotifyCertificatesExpiryJob: "true"
     image_name:
       adminWebserver: "core-admin-webserver"
       webserver: "core-web-server"
@@ -36,7 +41,8 @@ global:
     self_hosted_deployment: true
     is_replica_region: false
     finops: "disable"
-
+    db_ssl_root_cert_secretname: "db-ssl-root-cert"
+    db_ssl_root_cert_filename: "db_ssl_root.cert"
   external:
     db_host: ""
     db_master_writer_host: ""
@@ -48,7 +54,6 @@ global:
     db_secret_name: ""
     environment: "production"
     db_ssl_mode: "disable"
-    db_ssl_root_cert: ""
     fromAndReplyToEmailAddress: "not-set-yet"
     cronJobReportsEmailAlias: ""
     platformEmailNotificationCcAddresses: ""
