--- a/charts/platform-base/values.yaml
+++ b/charts/platform-base/values.yaml
@@ -9,6 +9,8 @@ global:
   tibco:
     is_replica_region: false
     finops: "disable"
+    db_ssl_root_cert_secretname: "db-ssl-root-cert"
+    db_ssl_root_cert_filename: "db_ssl_root.cert"
   external:
     db_host: ""
     db_master_writer_host: ""
