--- a/charts/tibco-developer-hub/values.yaml
+++ b/charts/tibco-developer-hub/values.yaml
@@ -121,7 +121,7 @@ backstage:
     # -- Backstage image name
     name: dx-tibco-hub
     # -- Backstage image tag (immutable tags are recommended)
-    tag: "591"
+    tag: "636-1.3.0-HF3"
 
     # -- Specify a imagePullPolicy.
     # Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
