--- a/charts/tibco-developer-hub/templates/well-known-configuration-ingress-nginx.yaml
+++ b/charts/tibco-developer-hub/templates/well-known-configuration-ingress-nginx.yaml
@@ -2,7 +2,6 @@
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 {{ if eq .Values.publicApi.ingress.controllerName "nginx" -}}
-{{ $cpHostname := (.Values.global.cp).cpHostname | required ".Values.global.cp.cpHostname is required." }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -15,11 +14,7 @@ metadata:
     {{- include "common.tplvalues.render" ( dict "value" .Values.commonLabels "context" $ ) | nindent 4 }}
     {{- end }}
   annotations:
-    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
-    nginx.ingress.kubernetes.io/upstream-vhost: {{ $cpHostname }}
-    nginx.ingress.kubernetes.io/rewrite-target: /.well-known/openid-configuration
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      proxy_set_header x-cp-host {{ $cpHostname }};
+   nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
     {{- with .Values.global.cp.resources.ingress.annotations }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
@@ -31,9 +26,9 @@ spec:
         paths:
           - backend:
               service:
-                name: {{ include "common.names.fullname" . }}-wkc
+                name: {{ include "common.names.fullname" . }}
                 port:
-                  number: 443
+                  number: {{ .Values.service.ports.backend }}
             path: /tibco/hub/.well-known/openid-configuration
             pathType: Exact
 {{- end }}
