--- a/charts/tp-cp-core-finops/charts/finops-service/values.yaml
+++ b/charts/tp-cp-core-finops/charts/finops-service/values.yaml
@@ -3,6 +3,8 @@ global:
   external:
     environment: ""
   tibco:
+    db_ssl_root_cert_secretname: "db-ssl-root-cert"
+    db_ssl_root_cert_filename: "db_ssl_root.cert"
     logging:
       fluentbit:
         image:
