--- a/charts/tp-cp-core-finops/charts/monitoring-service/Chart.yaml
+++ b/charts/tp-cp-core-finops/charts/monitoring-service/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 1.3.0
+appVersion: 1.3.0-HF3
 description: A Helm chart for -- Monitoring service
 name: monitoring-service
-version: 1.3.267
+version: 1.3.297
