--- a/charts/tp-cp-core-finops/charts/finops-service/Chart.yaml
+++ b/charts/tp-cp-core-finops/charts/finops-service/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 1.3.0
+appVersion: 1.3.0-HF3
 description: A Helm chart for -- Finops service
 name: finops-service
-version: 1.3.72
+version: 1.3.82
