--- a/charts/tp-cp-core-finops/values.yaml
+++ b/charts/tp-cp-core-finops/values.yaml
@@ -11,6 +11,8 @@ finops:
 # Global section will apply to this chart and all of its subcharts.
 global:
   tibco:
+    db_ssl_root_cert_secretname: "db-ssl-root-cert"
+    db_ssl_root_cert_filename: "db_ssl_root.cert"
     is_replica_region: false
   # Pod Security Context configuration
   # This configuration ensures that the pod is run with non-root privileges for enhanced security.
